--- a/views/custommerPage.ejs
+++ b/views/custommerPage.ejs
@@ -55,9 +55,10 @@
                         <button type="button" class="input-group-text text-light btn "  > Minimum
                           budget</button>
                         <input name="budgetStart"  id="idBudgetFrom" style="background-color:rgba(36, 74, 36, 0.596);" type="number" onchange="loadSearchResult()"
-                          name="budgetEnd" class="text-light SearchTextBox">
-                        <input name="budgetEnd"  id="idBudgetEnd" style="background-color:rgba(36, 74, 36, 0.596);" type="number" onchange="loadSearchResult()"
-                          name="" class="text-light  SearchTextBox">
+                          class="text-light SearchTextBox">
+                        
+                          <input name="budgetEnd"  id="idBudgetEnd" style="background-color:rgba(36, 74, 36, 0.596);" type="number" onchange="loadSearchResult()"
+                           class="text-light  SearchTextBox">
                         <button type="button" class="input-group-text text-light btn" >
                           <Main> Maximum Limit </Main>
                         </button>
