--- a/views/detailedSearch.ejs
+++ b/views/detailedSearch.ejs
@@ -1,5 +1,5 @@
 <%- include('header') %>
-    <%- include('MenuBarCustomer') %>
+<%- include('MenuBarCustomer') %>
     <form action="/custom/customSearch" method="post"> 
         <div class="container-fluid">
             <div>
@@ -160,7 +160,7 @@
                                     <div class="card-footer">
                                             <% console.log(element) %>
                                             <input type="submit" style="opacity: 0;" name="CompanyID" data-="" name="CompanySearchKey" value="">
-                                            <button name="submitCompanyDetails" value="<%=element.compayID%>"  onclick="loadHotelBasedResult(event.target.value)" type="button" value="<%=  element.CompanyID  %>" class="btn btn-primary">Details</button>
+                                            <button name="submitCompanyDetails" value="<%=element.CompanyID%>"  onclick="loadHotelBasedResult(event.target.value)" type="button" value="<%=  element.CompanyID  %>" class="btn btn-primary">Details</button>
                                         
                                        
                                       </div>
@@ -178,3 +178,7 @@
                 </div>
         </div>
     </form>
+
+    
+<script src="/Script/customerSearch.js"> </script>
+<%- include('footer') %>
