--- a/views/detailedSearch.ejs
+++ b/views/detailedSearch.ejs
@@ -166,7 +166,7 @@
                                       </div>
                                   </div>
                             <% }) %>
-
+                                    
                             <%- include('footer') %>
 
                         </div>
@@ -176,6 +176,9 @@
                     </div>
                 </div>
                 </div>
+        </div>
+        <div class="container-fluid" id="idConfirmBooking">
+                 
         </div>
     </form>
 
