--- a/views/header.ejs
+++ b/views/header.ejs
@@ -19,23 +19,23 @@
  <!-- Modal -->
 <div class="modal fade mr-2 " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
-    <div class="modal-content" style="background-color: rgba(255, 250, 245, 0.738) ; height: 350px ; width:400px;">
+    <div class="modal-content" style="background-color: rgba(255, 250, 245, 0.738) ;  width:400px;">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Sign in</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>..
       <div class="modal-body"  >
         <div>
-          <small>Email or Mobile </small>
+          <small>Email </small>
         </div>
         <div class="input-group flex-nowrap mb-1  ">
-          
-            <button class="btn btn-light bi bi-telephone-fill col-2"></button> <button class="btn-light btn bi bi-envelope-at-fill col-2" ></button>
-          <input type="text" id="idUserName" class="btn btn-light" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
+             <button class="btn-light btn bi bi-envelope-at-fill col-4" ></button>
+          <input type="text" id="idUserName" name="userName" class="btn btn-light" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
         </div>
+        <small>Password </small>
         <div class="input-group flex-nowrap  ">
           <span class="btn btn-light col-4" >Password</span>
-        <input type="password" id="idUserPassword" class="btn btn-light" placeholder="Password" aria-label="Password" aria-describedby="addon-wrapping">
+        <input type="password" id="idUserPassword" name="password" class="btn btn-light" placeholder="Password" aria-label="Password" aria-describedby="addon-wrapping">
       </div>
       </div>..
       <div class="modal-footer">
