--- a/views/detailedSearch.ejs
+++ b/views/detailedSearch.ejs
@@ -15,7 +15,6 @@
                                     data-hotels="<%= JSON.stringify(generalData) %>" name="SearchText"
                                     class="   SearchTextBox text-light fw-lighter" id="idSearchText"
                                     onchange="loadHotel(event.target.value,'' ), loadSearchResult()">
-                                   
                                     <option style="background-color: rgba(36, 74, 36, 0.777); height: 100px;"
                                         class="col-12 SearchTextBox text-light fw-LIGHTER" value="<%= inputData.ditrictName %>" > <%= inputData.ditrictName %>
                                     </option>
@@ -23,8 +22,6 @@
                                     class="col-12 SearchTextBox text-light fw-LIGHTER" value="">All the Space we
                                     have
                                 </option>
-                                     
-
                                     <% district.forEach(element=> { %>
                                         <option style="background-color: rgba(36, 74, 36, 0.86); height: 100px;"
                                             class="col-12 SearchTextBox text-light fw-LIGHTER"
@@ -32,12 +29,8 @@
                                             <%= element %>
                                         </option>
                                         <% }) %>
-                                         
                                 </select>
-                                    
-                                
                             </div>
-
                             <div class="d-flex justify-content-center"
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
                                 <button type="button" class="input-group-text text-light btn"
@@ -45,31 +38,26 @@
                                 <input name="CheckinDate" id="idStartDate" type="datetime-local" value="<%= inputData.CheckinDate %>" class="text-light SearchTextBox ">
                             </div>
 
-                            <div class="d-flex justify-content-center   "
+                            <div class="d-flex justify-content-center"
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
                                 <button type="button" class="input-group-text text-light btn"
                                     style="background-color: transparent;" id="iDServiceImages1btn2">Check-out</button>
                                 <input name="CheckoutDate" id="idEndDate" type="datetime-local" value="<%= inputData.CheckoutDate %>" class="text-light SearchTextBox ">
                             </div>
-
-                             
-
-                            <div class="d-flex   "
+                            <div class="d-flex"
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
                                 <button type="button" class="input-group-text text-light btn"
                                     style="background-color: transparent;" id=" iDServiceImages1btn2">GUEST</button>
                                 <input id="idGuestCount" type="number" name="GuestCount" value="<%= inputData.GuestCount %>"
                                     class="text-light    SearchTextBox">
                             </div>
-                            <div class="d-flex   "
+                            <div class="d-flex"
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
                                 <button type="button" class="input-group-text text-light btn "
                                     style="background-color: transparent;" id=" iDServiceImages1btn2">ROOMS </button>
                                 <input id="idRoomCount" type="number" name="roomCount" value="<%= inputData.roomCount %>"
                                     class="text-light   SearchTextBox">
                             </div>
-
-
                         </div>
                         <!-- Main Search box Ends here -->
                     </div>
@@ -108,20 +96,10 @@
                                 category</button>
                             <select id="idSelectTariff" class="input-group-text text-light btn"
                                 name="roomCategoryID">
-                               
                                 <option value="">All</option>
                                 <% tariff.forEach(item=> { %>
-                                    <% console.log(item.tariffIndex==inputData.roomCategoryID) %>
-                                        <% if (item.tariffIndex==inputData.roomCategoryID) { %>
-                                            <option value="<%= item.tariffIndex %>" selected > <%= item.tariffName %> </option>
-                                        <% } else { %>
-                                            <option class="btn" style="background-color:rgba(36, 74, 36, 0.196); "
-                                                value=" <%=item.tariffIndex%>">
-                                                <%= item.tariffName %>
-                                            </option>
-                                        <% } %>
+                                            <option value="<%= item.tariffIndex %>"> <%= item.tariffName %> </option>
                                     <% }) %>
-                                    
                             </select>
                         </div>
                         <div class="d-flex m-1 "
@@ -134,12 +112,10 @@
             </div>
                 <div>
                 <div class="container-fluid d-flex ">
-                    
                     <div class=" container-fluid col-10">
                         <div class="py-vh-4 bg-gray-100 w-100 overflow-hidden container d-flex"
                             style="flex-wrap: wrap;display: flex;" id="idTariffDetails">
-                            
-                            <% result.forEach(element => { %>
+                              <% result.forEach(element => { %>
                                 <div class="card col-3 p-1"   >
                                     <img class="w-100" style="height: 30%;" name="companyImage" value="<%= element.image1 %>" src="<%= element.image1 %>" class="card-img-top" alt="...">
                                     <div class="card-body">
