--- a/views/modal.ejs
+++ b/views/modal.ejs
@@ -22,11 +22,11 @@
             </div>
             <div class="input-group flex-nowrap mb-1">
                 <button class="btn btn-light bi bi-telephone-fill col-2"></button> <button class="btn-light btn bi bi-envelope-at-fill col-2" ></button>
-                <input type="text" name="Username" id="idUserNameVendure " class="btn btn-light" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
+                <input type="text" name="userName" id="idUserNameVendure " class="btn btn-light" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
             </div>
             <div class="input-group flex-nowrap  ">
             <span class="btn btn-light col-4" >Password</span>
-            <input type="password" name="Password" id="idUserPasswordVendure" class="btn btn-light" placeholder="Password" aria-label="Password" aria-describedby="addon-wrapping">
+            <input type="password" name="password" id="idUserPasswordVendure" class="btn btn-light" placeholder="Password" aria-label="Password" aria-describedby="addon-wrapping">
             </div>
             </div>..
             <div class="modal-footer">
@@ -37,13 +37,14 @@
         </div>
         </div>
     </div>
-    </form>
-    <div class="modal fade modal-lg" id="resetPassword" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg"> <!-- Add modal-lg class to the modal-dialog -->
+</form>
+    <div class="modal fade modal-lg" id="resetPassword" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">       <div class="modal-dialog modal-lg"> <!-- Add modal-lg class to the modal-dialog -->
             <div class="modal-content" style="background-color: rgba(255, 250, 245, 0.738); height: 100%; width: 600px;"> <!-- Adjust height and width as needed -->
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Sign in</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+
+                    </button>
                 </div>
                 <div class="modal-body">
                    <div class="container-fluid border border-light align-item-centre ">
@@ -79,8 +80,39 @@
             </div>
         </div>
     </div>
-    
-       
+<form action="/authenticate/custLogin" method="post">
+    <div class="modal fade mr-2 "   id="customerLogin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+        <div class="modal-content" style="background-color: rgba(72, 93, 74, 0.84); width:400px;">
+            <div class="modal-header">
+            <h5 class="modal-title txt text-light" id="exampleModalLabel">Sign in</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div> 
+            <div class="modal-body">
+            <div>
+                <small class="txt text-light">Email</small>
+            </div>
+            <div class="input-group flex-nowrap mb-1">
+                <button class="btn-light btn bi bi-envelope-at-fill col-4" >Email    </button>
+                <input type="email" name="userName" id="idUserNameCustomer" class="btn btn-light" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
+            </div>
+            <div>
+                <small class="txt text-light">Password</small>
+            </div>
+            <div class="input-group flex-nowrap  ">
+                <button class="btn btn-light col-4 bi bi-key col-4" >Password</button> 
+                <input type="password" name="password" id="idUserPasswordcustomer" class="btn btn-light" placeholder="Password" aria-label="Password" aria-describedby="addon-wrapping">
+            </div>
+            </div>..
+            <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#resetPassword">ChangePassword</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" onclick="signinCustomer()" class="btn btn-success">Sign in </button>
+            </div>
+        </div>
+        </div>
+    </div>
+</form>   
 </body>
 </html>
 <!-- vendurelogin -->
