--- a/views/modal.ejs
+++ b/views/modal.ejs
@@ -107,7 +107,7 @@
             <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#resetPassword">ChangePassword</button>
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" onclick="signinCustomer()" class="btn btn-success">Sign in </button>
+            <button type="submit" onclick="signinCustomer()" class="btn btn-success">Sign in </button>
             </div>
         </div>
         </div>
