--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -24,7 +24,7 @@
             <span class="input-group-text" id="Signup_input_group_text" >Email</span>
             </div>
             <input id="Signup_Email_text" type="email" class="form-control" name="email"   placeholder="Email" required>
-            <button id="Signup_Email_Bt" class="btn btn-outline-success bi bi-search" onclick="verifyEmail('Signup_Email_text')" ></button>
+            <button id="Signup_Email_Bt" class="btn btn-outline-success bi bi-search" onclick="verifyEmail('Signup_Email_text','Signup_Email_Bt');" ></button>
         
         </div>    
         <!-- ************ -->
