--- a/views/MenuBarCustomer.ejs
+++ b/views/MenuBarCustomer.ejs
@@ -7,9 +7,12 @@
 <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-<nav class="navbar navbar-expand-lg navbar-dark  " style="background-color:  rgba(43, 59, 43, 0.796);">
+<nav class="navbar navbar-expand-lg navbar-dark container-fluid " style="background-color:  rgba(43, 59, 43, 0.796);">
   <div class="container px-5">
-    <a class="navbar-brand" style="font-size: 50px;" href="#!">Letni-eroc </a>
+    <div class="container-fluid d-flex">
+      
+      <small class="text text-light" > <span class="navbar-brand" style="font-size: 50px;" href="#!">Google</span> Navigate Luxury, Book with Ease.</small>
+    </div>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
