--- a/views/detailedSearch.ejs
+++ b/views/detailedSearch.ejs
@@ -2,28 +2,26 @@
 <%- include('MenuBarCustomer') %>
     <form action="/custom/customSearch" method="post"> 
         <div class="container-fluid">
-            <div>
-                <div style="margin-top: 0%;border-radius: 10px; border: 5px solid rgba(255, 255, 255, 0.268);      background-color: rgba(65, 90, 69, 0.762) ; height: 100%;">
-                    <div class="input-group  position-absolute d-flex ">
+             
+                <div class="container-fluid border rounded" style="background-color: rgba(65, 90, 69, 0.762) ; ">
+                    <div class="col">
                         <!-- Main Search box Start here -->
-                        <div class=" d-flex mb-3">
-                            <div class="d-flex justify-content-center"
-                                style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
-                                <button type="button" class="input-group-text text-light btn"
-                                style="background-color: transparent;" id="iDServiceImages1btn2">Location</button>
+                        <div class="row" >
+                            <div class="col d-flex" >
+                                <button type="button" class="input-group-text text-light btn"style="background-color: transparent;" id="iDServiceImages1btn2">Location</button>
                                 <select name="ditrictName" type="text" value="<%= inputData.ditrictName %>"  id="idDitrictName"
                                     data-hotels="<%= JSON.stringify(generalData) %>" name="SearchText"
-                                    class="   SearchTextBox text-light fw-lighter" id="idSearchText"
+                                    class="   w-100 btn border-none h-100  text-light fw-lighter" id="idSearchText"
                                     onchange="loadHotel(event.target.value,'' ), loadSearchResult()">
-                                    <option style="background-color: rgba(36, 74, 36, 0.777); height: 100px;"
+                                    <option style="background-color: rgba(65, 90, 69, 0.762) ; height: 100px;"
                                         class="col-12 SearchTextBox text-light fw-LIGHTER" value="<%= inputData.ditrictName %>" > <%= inputData.ditrictName %>
                                     </option>
-                                    <option style="background-color: rgba(36, 74, 36, 0.777); height: 100px;"
-                                    class="col-12 SearchTextBox text-light fw-LIGHTER" value="">All the Space we
+                                    <option style="background-color:  rgba(65, 90, 69, 0.762) ; height: 100px;"
+                                    class="col-12 SearchTextBox text-light fw-LIGHTER" selected  value="">All the Space we
                                     have
                                 </option>
                                     <% district.forEach(element=> { %>
-                                        <option style="background-color: rgba(36, 74, 36, 0.86); height: 100px;"
+                                        <option style="background-color: rgba(65, 90, 69, 0.762) ; height: 100px;"
                                             class="col-12 SearchTextBox text-light fw-LIGHTER"
                                             value="<%= element  %>">
                                             <%= element %>
@@ -31,27 +29,27 @@
                                         <% }) %>
                                 </select>
                             </div>
-                            <div class="d-flex justify-content-center"
+                            <div class="col d-flex"
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
                                 <button type="button" class="input-group-text text-light btn"
                                     style="background-color: transparent;" id="iDServiceImages1btn2">Check-in</button>
                                 <input name="CheckinDate" id="idStartDate" type="datetime-local" value="<%= inputData.CheckinDate %>" class="text-light SearchTextBox ">
                             </div>
 
-                            <div class="d-flex justify-content-center"
+                            <div class="col d-flex"
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
                                 <button type="button" class="input-group-text text-light btn"
                                     style="background-color: transparent;" id="iDServiceImages1btn2">Check-out</button>
                                 <input name="CheckoutDate" id="idEndDate" type="datetime-local" value="<%= inputData.CheckoutDate %>" class="text-light SearchTextBox ">
                             </div>
-                            <div class="d-flex"
+                            <div class="col d-flex"
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
                                 <button type="button" class="input-group-text text-light btn"
                                     style="background-color: transparent;" id=" iDServiceImages1btn2">GUEST</button>
                                 <input id="idGuestCount" type="number" name="GuestCount" value="<%= inputData.GuestCount %>"
                                     class="text-light    SearchTextBox">
                             </div>
-                            <div class="d-flex"
+                            <div class="col d-flex"
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
                                 <button type="button" class="input-group-text text-light btn "
                                     style="background-color: transparent;" id=" iDServiceImages1btn2">ROOMS </button>
@@ -59,67 +57,59 @@
                                     class="text-light   SearchTextBox">
                             </div>
                         </div>
+                        <div class="row" >
+                         
+                            <div class="col "
+                                style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
+                                <input id="idBudgetFrom"  style="background-color:rgba(36, 74, 36, 0);" type="number"
+                                value="<%=inputData.budgetStart %>"  onchange="loadSearchResult()" name="budgetStart" class="text-light  SearchTextBox">
+                                <button type="button" class="input-group-text text-light btn" id=" iDServiceImages1btn2">
+                                    <Main> Minimum Limit </Main>
+                                </button>
+    
+                            </div>
+                            <div class="col "
+                                style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
+                                <button type="button" class="input-group-text text-light btn " name="budgetend"
+                                    id="iDServiceImages1btn2">Maximum 
+                                    budget</button>
+                                <input id="idBudgetEnd" style="background-color:rgba(36, 74, 36, 0);" type="number"
+                                    onchange="loadSearchResult()" value="<%= inputData.budgetEnd  %>" name="budgetEnd" class="text-light SearchTextBox">
+                            </div>
+                            <div class="col"
+                                style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
+                                <button type="button" class="input-group-text text-light btn " id=" iDServiceImages1btn2">
+                                    category</button>
+                                <select id="idSelectTariff" class="input-group-text text-light btn"
+                                    name="roomCategoryID">
+                                    <option value="">All</option>
+                                    <% tariff.forEach(item=> { %>
+                                                <option value="<%= item.tariffIndex %>"> <%= item.tariffName %> </option>
+                                        <% }) %>
+                                </select>
+                            </div>
+                            <div class="col "
+                            style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
+                                <button  onclick=""  type="submit" class="btn text-light btn-secondary bi bi-search "> LOAD </button>
+                            </div>
+                     
+
+                        </div>
+
                         <!-- Main Search box Ends here -->
                     </div>
-
-
-                    <br>
-
-                    <br>
-                    <br>
-
-                    <div class=" d-flex input-group">
-                        <div class="d-flex m-1 "
-                            style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
-                            <input id="idBudgetFrom"  style="background-color:rgba(36, 74, 36, 0);" type="number"
-                            value="<%=inputData.budgetStart %>"  onchange="loadSearchResult()" name="budgetStart" class="text-light  SearchTextBox">
-                            <button type="button" class="input-group-text text-light btn" id=" iDServiceImages1btn2">
-                                <Main> Minimum Limit </Main>
-                            </button>
-
-                        </div>
-                        <div class="d-flex m-1 "
-                            style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
-                            <button type="button" class="input-group-text text-light btn " name="budgetend"
-                                id="iDServiceImages1btn2">Maximum 
-                                budget</button>
-                            <input id="idBudgetEnd" style="background-color:rgba(36, 74, 36, 0);" type="number"
-                                onchange="loadSearchResult()" value="<%= inputData.budgetEnd  %>" name="budgetEnd" class="text-light SearchTextBox">
-                        </div>
-
-                        
-
-
-                        <div class="d-flex m-1 "
-                            style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
-                            <button type="button" class="input-group-text text-light btn " id=" iDServiceImages1btn2">
-                                category</button>
-                            <select id="idSelectTariff" class="input-group-text text-light btn"
-                                name="roomCategoryID">
-                                <option value="">All</option>
-                                <% tariff.forEach(item=> { %>
-                                            <option value="<%= item.tariffIndex %>"> <%= item.tariffName %> </option>
-                                    <% }) %>
-                            </select>
-                        </div>
-                        <div class="d-flex m-1 "
-                        style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
-                            <button  onclick=""  type="submit" class="btn text-light btn-secondary bi bi-search "> LOAD </button>
-                        </div>
-                    </div>
-
                 </div>
-            </div>
-                <div>
-                <div class="container-fluid d-flex ">
-                    <div class=" container-fluid col-10">
-                        <div class="py-vh-4 bg-gray-100 w-100 overflow-hidden container d-flex"
-                            style="flex-wrap: wrap;display: flex;" id="idTariffDetails">
+             
+                 
+                <div class="container-fluid border rounded d-flex   " style="overflow: auto; flex-wrap: wrap;display: flex;" id="idTariffDetails"> 
+                 
+                         
+                            
                               <% result.forEach(element => { %>
-                                <div class="card col-3 p-1"   >
-                                    <img class="w-100" style="height: 30%;" name="companyImage" value="<%= element.image1 %>" src="<%= element.image1 %>" class="card-img-top" alt="...">
+                                <div class="card col-3 p-1 m-0"   >
+                                    <img class="w-100 rounded" style="height: 30%;" name="companyImage" value="<%= element.image1 %>" src="<%= element.image1 %>" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                      <h3 class="card-title" data-hotelTariffs="${result[i].tariffDetails}" > <%= element.lastName %></h3> <small class="card-text" style="height: fit-content;"  ><%= element.district %> </small> <br>
+                                      <h3 class="card-title" data-hotelTariffs="${result[i].tariffDetails}" style="text-transform: uppercase"> <%= element.lastName %></h3> <small class="card-text" style="text-transform: uppercase; height: fit-content;"  ><%= element.district %> </small> <br>
                                       <small class="card-text bi bi-telephone-fill" style="height: fit-content;"  > <%= element.contactNumber %></small><br>
                                       <small class="card-text bi bi-envelope-at"  style="height: fit-content;"  >  <%= element.email %> </small>
                                       <div class="d-flex justify-content-center">
@@ -129,29 +119,22 @@
                                         <h6 class="bi bi-star-fill"></h6>
                                         <h6 class="bi bi-star-fill"></h6>
                                       </div>
-                                      <small class="card-text" style="height: fit-content;"  ><%= element.Companydiscription %></small>
-                                      
-                                      
-                                    </div>
+                                      <small class="card-text"    ><%= element.Companydiscription %></small>
+                                      </div>
                                     <div class="card-footer">
                                             
-                                            <input type="submit" style="opacity: 0;" name="CompanyID" data-="" name="CompanySearchKey" value="">
                                             <button name="submitCompanyDetails" value="<%=element.CompanyID%>"  onclick="loadHotelBasedResult(event.target.value)" type="button" value="<%=  element.CompanyID  %>" class="btn btn-primary">Details</button>
-                                        
-                                       
-                                      </div>
+                                       </div>
                                   </div>
                             <% }) %>
                                     
                             <%- include('footer') %>
 
-                        </div>
-                    </div>
-                    <div class="container-fluid col-2 fixed" style="background-color: rgba(64, 85, 64, 0.184); ">
-                        <!-- Detaild Search Bar  -->
-                    </div>
+ 
+                     
+                     
                 </div>
-                </div>
+                 
         </div>
         <div class="container-fluid" id="idConfirmBooking">
                  
