--- a/views/custommerPage.ejs
+++ b/views/custommerPage.ejs
@@ -11,74 +11,39 @@
           <div class="container position-relative">
             <div class=" container-fluid fixed" data-aos="fade-left"
               style="background-image: url('/Images/1694680589320-image (2).jpg'); height: 600px; background-position: center; background-size: cover;">
-              <div class="position-absolute  " style="top: 100px;" >
-                <div class="col-lg-10 position-absolute " data-aos="fade-right">
-                  
-                    <div   style="position: fixed; margin-top: 0%;border-radius: 10px; border: 5px solid rgba(255, 255, 255, 0.268);      background-color: rgba(63, 65, 63, 0.762) ; height: 200px;">
-                      <form action="/custom/customSearch" method="post">
-                        <div class="input-group  position-absolute ">
-                          <!-- Main Search box Start here -->
-                          <div class=" col-12 d-flex">
+               <br><br><br>
+                <div  >
+                  <h1 class="text-light" style="font-size: 60px; font-family: poppins;" >Search your favorite desination </h1>
+                  <div class="  container-fluid w-100 col-11 rounded border " style="  background-color:rgba(186, 90, 21, 0.748); height: 100px;" >
+                    <form action="/custom/customSearch" method="post">
+                            <!-- Main Search box Start here -->
                            <h5 class="col-2 text-light ">Location </h5>
-                            <select name="ditrictName" type="text" data-hotels="<%= JSON.stringify(generalData) %>" name="SearchText"
-                              class=" col-8 SearchTextBox text-light fw-lighter" id="idSearchText"
-                              onchange="">
-                              <option style="background-color: rgba(36, 74, 36, 0.777); height: 100px;"
-                                class="col-12 SearchTextBox text-light fw-LIGHTER" value="">All the Space we have </option>
-                              <% district.forEach(element=> { %>
-                                <option style="background-color: rgba(36, 74, 36, 0.86); height: 100px;"
-                                  class="col-12 SearchTextBox text-light fw-LIGHTER" value="<%=element%>">
-                                  <%=element%>
-                                </option>
-                                <% }) %>
+                            <div class="container d-flex">
+                              <select name="ditrictName" type="text" data-hotels="<%= JSON.stringify(generalData) %>"  
+                                class=" col-11 btn w-100 text-light fw-lighter" id="idSearchText" onchange="">
+                                <option style="background-color:rgba(186, 90, 21, 0.748); font-size: large;"
+                                  class="col-12 SearchTextBox text-light fw-LIGHTER" value="">  All Cities </option>
+                                    <% district.forEach(element=> { %>
+                                        <option style="background-color:rgba(186, 90, 21, 0.748); height: 100px;"
+                                          class=" col-12 btn w-100 text-light fw-lighter" value="<%=element%>">
+                                          <%=element%>
+                                        </option>
+                                  <% }) %>
                               </select>
-                          </div>
-                           <!-- Main Search box Ends here -->
-                        </div>
-                   <br>
-                   <br>
-                      <div class="container-fluid d-flex input-group no-wrap">
-                        <button type="button"  class="input-group-text text-light btn" style="background-color: transparent;"
-                          >Check-in</button>
-                        <input name="CheckinDate" id="idStartDate" type="datetime-local"   class="text-light SearchTextBox ">
-                         <button type="button"  class="input-group-text text-light btn " style="background-color: transparent;"
-                          >Check-out </button>
-                        <input id="idEndDate" type="datetime-local" name="CheckoutDate" class="text-light  SearchTextBox">
-                        <button type="button" class="input-group-text text-light btn" style="background-color: transparent;"
-                          >GUEST</button>
-                        <input id="idGuestCount" type="number" name="GuestCount" class="text-light col-1  SearchTextBox">
-                        <button type="button" class="input-group-text text-light btn " style="background-color: transparent;"
-                          >ROOMS </button>
-                        <input id="idRoomCount" type="number" name="roomCount" class="text-light col-1 SearchTextBox">
-                      </div>
-                      <div class="container justify-content-center d-flex input-group">
-                        <button type="button" class="input-group-text text-light btn "  > Minimum
-                          budget</button>
-                        <input name="budgetStart"  id="idBudgetFrom" style="background-color:rgba(36, 74, 36, 0.596);" type="number" onchange="loadSearchResult()"
-                          class="text-light SearchTextBox">
-                        
-                          <input name="budgetEnd"  id="idBudgetEnd" style="background-color:rgba(36, 74, 36, 0.596);" type="number" onchange="loadSearchResult()"
-                           class="text-light  SearchTextBox">
-                        <button type="button" class="input-group-text text-light btn" >
-                          <Main> Maximum Limit </Main>
-                        </button>
-                        <button type="button" class="input-group-text text-light btn " > category</button>
-                        <select id="idSelectTariff" class="input-group-text text-light btn col-2" name="roomCategoryID">
-                          <option value="">All</option>
-                          <% tariff.forEach(item=> { %>
-                            <option class="btn col-3 " style="background-color:rgba(36, 74, 36, 0.196); " value="<%=item.tariffIndex %>">
-                              <%= item.tariffName %>
-                            </option>
-                            <% }) %>
-                        </select>
-                        <div>
-                          <button type="submit" class="btn text-light btn-secondary "  > LOAD </button>
-                        </div>
-                      </div>
-                    </form>
-                    </div>
-
-                    </div>
+                              <button class="btn text-light bi bi-search">
+                                FIND
+                              </button></div>
+                            
+                             
+                              
+                     
+                  </form>
+                </div>  
+   
+  
+                  </div>
+                
+                  
               </div>
             
             </div>
