--- a/views/modal.ejs
+++ b/views/modal.ejs
@@ -38,7 +38,8 @@
         </div>
     </div>
 </form>
-    <div class="modal fade modal-lg" id="resetPassword" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">       <div class="modal-dialog modal-lg"> <!-- Add modal-lg class to the modal-dialog -->
+    <div class="modal fade modal-lg mr-2" id="resetPassword" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">       
+        <div class="modal-dialog modal-lg"> <!-- Add modal-lg class to the modal-dialog -->
             <div class="modal-content" style="background-color: rgba(255, 250, 245, 0.738); height: 100%; width: 600px;"> <!-- Adjust height and width as needed -->
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Sign in</h5>
@@ -52,8 +53,8 @@
                     
                     <div class="input-group mb-3">
                         <span class="input-group-text col-4" id="basic-addon1">email/Mobile</span>
-                        <input type="text" id="idVerifyEmail-Phone" class="form-control" onchange="verifyEmail('idVerifyEmail-Phone','Signup_Email_Bt')" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
-                        <button id="Signup_Email_Bt" class="btn"></button>
+                        <input type="text" id="idVerifyEmail-Phone" class="form-control" onchange="verifyEmail('idVerifyEmail-Phone','Signup_Email_Btn')" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                        <button id="Signup_Email_Btn" class="btn"></button>
                     </div>
                         <div class="input-group mb-3">
                             <span class="input-group-text col-4" id="basic-addon1">old Password</span>
@@ -81,10 +82,10 @@
         </div>
     </div>
 <form action="/authenticate/custLogin" method="post">
-    <div class="modal fade mr-2 "   id="customerLogin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-        <div class="modal-content" style="background-color: rgba(72, 93, 74, 0.84); width:400px;">
-            <div class="modal-header">
+    <div class="modal fade mr-2" id="customerLogin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl"> <!-- Change modal-lg to modal-xl for an extra-large modal -->
+            <div class="modal-content" style="background-color: rgba(72, 93, 74, 0.84); width:400px;">
+                 <div class="modal-header">
             <h5 class="modal-title txt text-light" id="exampleModalLabel">Sign in</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div> 
@@ -93,7 +94,7 @@
                 <small class="txt text-light">Email</small>
             </div>
             <div class="input-group flex-nowrap mb-1">
-                <button class="btn-light btn bi bi-envelope-at-fill col-4" >Email    </button>
+                <button class="btn-light btn bi bi-envelope-at-fill col-4" >Email</button>
                 <input type="email" name="userName" id="idUserNameCustomer" class="btn btn-light" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
             </div>
             <div>
@@ -103,19 +104,112 @@
                 <button class="btn btn-light col-4 bi bi-key col-4" >Password</button> 
                 <input type="password" name="password" id="idUserPasswordcustomer" class="btn btn-light" placeholder="Password" aria-label="Password" aria-describedby="addon-wrapping">
             </div>
-            </div>..
+            </div>
             <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#resetPassword">ChangePassword</button>
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             <button type="submit" onclick="signinCustomer()" class="btn btn-success">Sign in </button>
+            <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#customerRegister">Signup </button>
+            
             </div>
         </div>
         </div>
     </div>
-</form>   
+</form> 
+
+<!-- Modal -->
+<div class="modal fade btn" id="customerRegister" style="background-color: rgba(128, 109, 0, 0.408);" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg " >
+      <div class="modal-content"  >
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Create Account</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <form action="/authenticate/signUp" method="post">  
+            
+            <div class="container btn justify-content-evenly "     >
+                <div class="container-fluid "   >
+                     
+                    <h6 id="IdInfoText"></h6>
+                    <div class="container-fluid border-light d-flex rounded mb-3"  >
+                        <button class="border-0 rounded-start col-4" id="basic-addon1">Name</button>
+                        <input type="text"  class=" rounded-end form-control" id="Signup_name_text" name="name" placeholder="Name" required>
+                    </div>
+                    <!-- ************ -->
+                    <div class="container-fluid border-light d-flex rounded mb-3">
+                         
+                        <button class="border-0 rounded-start col-4" id="Signup_input_group_text">Email</button>
+                        <input id="Signup_Email_text" type="email" class="form-control" name="email" placeholder="Email" required>
+                        <button id="Signup_Email_Bt" type="button" class="btn btn-outline-success bi bi-search"
+                            onclick="verifyEmail('Signup_Email_text','Signup_Email_Bt');"></button>
+            
+                    </div>
+                    <!-- ************ -->
+                    <div class="container-fluid border-light d-flex rounded mb-3">
+                        <button class="border-0 rounded-start col-4">Phone</button>
+                        <input id="Signup_Email_Phone" type="number" class="form-control" name="phone" placeholder="Phone" required>
+                        <button id="Signup_phone_Bt" type="button" onclick="verifyphone('Signup_Email_Phone')"
+                            class="btn btn-outline-success bi bi-search"></button>
+                    </div>
+                    <!-- ************ -->
+                    <div class="container-fluid border-light d-flex rounded mb-3">
+                      
+                            <button class="border-0 rounded-start col-4 ">Username</button>
+                       
+                        <input type="text " id="Signup_User_Name" class="form-control " name="username" placeholder="Username"
+                            required>
+                        <button id="Signup_username_Bt" type="button" onclick="verifyUser('Signup_User_Name')"
+                            class="btn btn-outline-success bi bi-search "></button>
+            
+                    </div>
+                    <!-- ************ -->
+                    <div class="container-fluid border-light d-flex rounded mb-3">
+                            <button class="border-0 rounded-start col-4 " required>Password</button>
+                            <input autocomplete="new-password" onchange="verifyPassword()" onselect="nothing()" id="User_Login_password"
+                            type="password" class="form-control" name="password" placeholder="password">
+                    </div>
+            
+                </div>
+                <div class=" d-flex">
+                    <div class="  d-flex flex-row col-8">
+                        <button id="Bt_Save_Signup" onclick="verifyandupdate()" type="button"
+                            class="btn btn-outline-success col-4  bi bi-cursor-fill" value="signup"> SAVE </button>
+                        <button id="Bt_Cancel_signup" onclick="CancelEntry()" type="button"
+                            class="btn btn-outline-warning col-4 bi bi-x-square"> CANCEL </button>
+                    </div>
+                    <div class=" container-fluid d-flex flex-row-reverse col-4">
+                        <button id="Bt_Login_back" onclick="loadHome()" type="button"
+                            class="btn btn-outline-primary col-10 bi bi-person-square">LOG-IN </button>
+                    </div>
+                </div>
+                <br>
+            </div>
+            </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+ 
+ 
+     
+ 
+
+
 </body>
 </html>
 <!-- vendurelogin -->
+
+
+
+<!-- Signup -->
+  
+<!-- End signup -->
 <script src=" /Script/modal.js"> </script>
+<script src="/Script/Script_Signup.js"> </script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <!-- vendure login ends here  -->
